@@ -37,6 +37,9 @@ Fixed bugs:
 * no check for refid when prefix attribute is set in zipfileset.
   Bugzilla report 30498.
 
+* fix for junit4 issue introducted since beta2.
+  Bugzilla report 40682.
+
 Other changes:
 --------------
 
